# Langgraph-agent-for-cloudwatch-metrics

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  api2.py  ecs-pass-role-policy.json  main.py  pyproject.toml  task-definition.json
api/: api.py
architecture/: architecture.mmd
cloudwatch_trigger_lambdas/: lambda_function.py  lambda_function_ses_working_old.py  lambda_function_sns.py  old_lambda_function.py  old_send_to_s3_lambda.py  save_ecs_response_to_s3.py
cloudwatch_trigger_lambdas/old/: lambda_function_ses_working_old.py  lambda_function_sns.py  old_lambda_function.py  old_send_to_s3_lambda.py  save_ecs_response_to_s3.py
cpu_stress_test/: load_test.py
main/: main.py
sample_data/: 20251028T083107Z.json
src/: api.py  config.py  routes.py  utils.py
