[project]
name = "new-langraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.0.4",
    "bedrock-agentcore-starter-toolkit>=0.1.26",
    "boto3>=1.40.60",
    "flask>=3.1.2",
    "langchain>=1.0.2",
    "langchain-aws>=1.0.0",
    "langgraph>=1.0.1",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
]
